# project-setup-test

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
app/: CMakeLists.txt
app/src/: main.cpp
cmake/modules/: FindEigen3.cmake
lib/: CMakeLists.txt
lib/util/: CMakeLists.txt
lib/util/include/: util.h
lib/util/src/: util-priv.h  util.cpp
scripts/: travis-build-test.sh  travis-install-dependencies.sh
tests/: CMakeLists.txt  util.test.cpp
